# brand_generator

./: .coverage  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: PROJECT.md  architecture.md  contest-essay.md  demo-script.md  deployment.md  dev-journal.md  dev-logging.md  hackathon-requirements.md  optimization-results.md  tech-stack.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nemo/: README.md  flux_lora_train.py  lora_config.yaml
policies/: styleforge-orchestrator.yaml
references/: workshop-Copy1.ipynb
specs/: CP-001-foundation.md  CP-002-inference-clients.md  CP-003-brand-analyst.md  CP-004-art-director.md  CP-005-generator.md  CP-006-critic.md  CP-007-model-orchestrator.md  CP-008-orchestrator-loop.md  CP-009-openclaw-skill.md  CP-010-fastapi-backend.md  CP-011-frontend-gallery.md  CP-012-nemoclaw-telegram.md  CP-013-nim-routing.md  CP-014-nemo-lora.md  CP-015-tests-golden.md  CP-016-documentation.md  CP-017-vlm-reasoning-consistency.md  CP-018-vram-dashboard.md  CP-019-conversational-iteration.md  CP-020-multi-ref-images.md  ROADMAP.md  _template.md
src/: __init__.py
tests/: conftest.py  test_api.py  test_art_director.py  test_brand_analyst.py  test_brief_parser.py  test_comfyui_client.py  test_consistency.py  test_critic.py  test_generator.py  test_golden.py  test_http.py  test_iterate.py  test_model_orchestrator.py  test_ollama_client.py  test_openclaw_skill.py  test_router.py  test_runner.py  test_schemas.py  test_stepfun_client.py
(+87 files in other folders)
